# doorbell-notifier

./: README.md  doorbell-notifier.service  doorbell-notifier.sh  install.sh  pyproject.toml  uninstall.sh
doorbell_notifier/: main.py
